# rust-bert-score

./: .envrc  .gitignore  .gitmodules  AGENT.md  CLAUDE.md  Cargo.toml  INVESTIGATION_SUMMARY.md  PYTHON.md  README.md  VALIDATION_FINDINGS.md  VALIDATION_REPORT.md  analyze_similarity.py  build.sh  debug_identical.json  debug_s0008.json  debug_s0012.json  debug_s0020.json  py_whitespace.csv  pyproject.toml  rust_whitespace.csv  setup_env.sh  temp_config_test.tsv  test_comparison.py  test_embeddings.txt  test_roberta_tokenization.py  test_tokenization.py  test_whitespace.tsv  trace_bertscore.py
.cargo/: config.toml
.claude/: EXPERIMENTS.md  PLAN.md  PLAN_TEST_VERIFICATION.md  REQUIREMENTS_VERIFICATION.md  SUMMARY.md  TESTING_PLAN.md  TODO.md  VALIDATION_SUMMARY.md
benches/: bench.rs  benchmark.rs.nightly
data/: baselines.json  baselines_compact.json
data/benchmark/: direct_eval_pairs.tsv
data/benchmark/wmt16/: ref.txt
examples/: demo.rs
python/: test_basic.py
python-benchmark/: FINAL_STATUS.md  README.md  SETUP_STATUS.md  check_setup.py  pyproject.toml  test_env.py
python-benchmark/bertscore_python_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-benchmark/data/: direct_eval_pairs.tsv
python-benchmark/data/wmt16/: human_sys_scores.tsv
python-benchmark/data/wmt16/sys/: system4.txt
python-benchmark/scripts/: compare_direct.py  compare_wmt16.py  fetch_wmt16.sh  make_direct_set.py  run_direct_py.py  run_wmt16_py.py
python/rust_bert_score/: __init__.py
reports/: detailed_analysis.csv  direct_agreement.txt  direct_scores_python.csv  direct_scores_python_no_idf.csv  direct_scores_python_raw.csv  direct_scores_rust.csv  direct_scores_rust_baseline.csv  direct_scores_rust_no_idf.csv  direct_scores_rust_raw.csv  direct_scores_rust_real.csv  edge_case_validation.csv
scripts/: analyze_whitespace.py  compare_tokenization.py  diagnose_differences.py  diagnose_pytorch.py  download_libtorch.sh  extract_baselines.py  generate_baseline_data.py  generate_test_data.py  run_direct_rust.py  setup_libtorch.sh  test_configurations.py  validate_parity.py  validate_pipeline.py
scripts/benchmark/: compare_direct.py  compare_tokenization.py  compare_wmt16.py  debug_multiple_spaces.py  debug_single_pair.py  debug_tokenization.py  debug_whitespace.py  dump_tokens_py.py  fetch_wmt16.sh  generate_test_data.py  make_direct_set.py  quick_compare.py  run_direct_py.py  run_wmt16_py.py  rust_test.csv  temp_debug.tsv  temp_whitespace_test.tsv  test_baseline_values.py  test_bertscore_internals.py  test_configurations.py  test_edge_cases.py  test_empty_strings.py  test_numerical_stability.py  test_ok_embeddings.py  test_ok_okay.py  test_prefix_space.py  test_prefix_space_fix.py  validate_all.py  verify_whitespace_fix.py
scripts/benchmark/reports/: direct_scores_rust.csv
src/: baseline.rs  idf.rs  lib.rs  model.rs  pipeline.rs  similarity.rs  tokenizer.rs
src/cli/: mod.rs  score.rs  similarity.rs  types.rs
src/core/: api.rs  baseline.rs  baseline_data.rs  idf.rs  mod.rs  model.rs  pipeline.rs  score.rs  tokenizer.rs
src/python/: mod.rs
tests/: integration_test.rs  integration_tests_full.rs
