[package]
name = "rust-bert-score"
version = "0.2.0"
edition = "2025"

[lib]
name = "rust_bert_score"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
rayon = "1.10.0"
rust-bert = { version = "0.23.0", features = ["hf-tokenizers"] }
rust_tokenizers = "8.1.1"
tch = "0.17.0"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
numpy = { version = "0.20", optional = true }
clap = { version = "4.5.39", features = ["derive"] }
tokenizers = { version = "0.21.1", features = ["http"] }
hf-hub = "0.4.2"

[dev-dependencies]
criterion = "0.6.0"

[features]
default = []
python = ["pyo3", "numpy"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[[bench]]
name = "performance_benchmarks"
path = "benchmark/performance_benchmarks.rs"
harness = false

[[bin]]
name = "bert-score"
path = "src/bin/bert-score.rs"


[profile.dev]
opt-level = 1

[profile.release-lto]
inherits = "release"
lto = true
