[project]
name = "bertscore-python-benchmark"
version = "0.1.0"
description = "Python reference side for Rust vs Python BERTScore comparison"
requires-python = ">=3.10,<3.12"
dependencies = [
    "bert-score>=0.3.13",
    "torch>=2.2,<3.0",
    "transformers>=4.41",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "tqdm>=4.65",
    "seaborn>=0.12",
    "matplotlib>=3.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"